--- a/vacation.html
+++ b/vacation.html
@@ -3,6 +3,7 @@
   <head>
     <title>Vacation Dreams</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="container">
@@ -20,6 +21,47 @@
       <p>"I never want to leave!"</p>
       <footer>Traveler from Australia</footer>
     </blockquote>
+    <div class="row">
+     <div class="col-md-4">
+       <div class="well">
+       <h2>Beach Front Resort</h2>
+       <h3>Cost:$100 pp</h3>
+       <h4>Available: Monday-Friday 10:00 am - 5:00 pm  Saturday-Sunday: 8:00 am - 6:00 PM</h4>
+     <ul>
+       <li>Tour lobby.</li>
+       <li>Tour through amenities.</li>
+       <li>Tour beach.</li>
+       <li>Tour neigboring restaurants.</li>
+     </ul>
+    </div>
+    </div>
+    <div class="col-md-4">
+      <div class="well">
+      <h2>Hula Resort</h2>
+      <h3>Cost:$150 pp</h3>
+      <h4>Available: Monday-Friday 9:00 am - 5:00 pm  Saturday-Sunday: 9:00 am - 6:00 PM</h4>
+    <ul>
+      <li>Tour hotel.</li>
+      <li>Tour pool.</li>
+      <li>Tour Activities.</li>
+      <li>Tour souvenier shops</li>
+    </ul>
+    </div>
+   </div>
+   <div class="col-md-4">
+     <div class="well">
+     <h2>Pineappple Castle </h2>
+     <h3>Cost:$200 pp</h3>
+    <h4>Available: Monday-Friday 11:00 am - 5:00 pm  Saturday-Sunday: 12:00 pm - 6:00 PM</h4>
+   <ul>
+     <li>Walkthrough of hotel.</li>
+     <li>Communal BBQ.</li>
+     <li>Tour Pool.</li>
+     <li>Optional hula lessons.</li>
+   </ul>
+   </div>
+  </div>
+  </div>
     </div>
   </body>
   </html>
